# BoAT4

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  RELEASE_NOTES.md  boat.mk  sources.txt
docs/: 01_Technical_Memo.md  02_High_Level_Design.md  03_User_Guide.md  04_API_Manual.md  05_MPP_Feasibility_Analysis.md
examples/: erc20_abi.json  erc20_codec.c  erc20_codec.h  evm_erc20.c  evm_erc20_transferfrom.c  evm_transfer.c  pay_gateway_demo.c  pay_gateway_sol_demo.c  pay_mpp_demo.c  pay_nano_demo.c  pay_x402_demo.c  sol_transfer.c
include/: boat.h  boat_evm.h  boat_key.h  boat_pal.h  boat_pay.h  boat_sol.h
src/core/: boat_key.c  boat_key_soft.c  boat_rpc.c  boat_util.c
src/evm/: evm_abi.c  evm_rpc.c  evm_tx.c
src/pal/linux/: pal_linux.c
src/pay/: pay_common.c  pay_gateway.c  pay_gateway_cross.c  pay_gateway_sol.c  pay_mpp.c  pay_mpp_tempo.c  pay_nano.c  pay_x402.c
src/sol/: sol_borsh.c  sol_ix.c  sol_rpc.c  sol_spl.c  sol_tx.c
tests/: nano_seller.mjs  package-lock.json  package.json  run_tests.sh  test_common.h  test_erc20_transfer.c  test_eth_transfer.c  test_gateway.c  test_gateway_evm_to_sol.c  test_gateway_sol.c  test_gateway_sol_to_evm.c  test_gateway_sol_transfer.c  test_mpp_tempo.c  test_mpp_unit.c  test_nano.c  test_sol_transfer.c  test_spl_transfer.c  test_x402_payment.c  x402_server.cjs
tools/: abi2c.py  compute_typehash.c
